Bug 246446 - Cannot select multiple templates when creating a new file
Summary: Cannot select multiple templates when creating a new file
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-01 19:05 UTC by Alvaro Soliverez
Modified: 2010-08-01 19:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-08-01 19:05:59 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

When creating a new file, the user is offered a list of account templates.
After the port only one template can be selected at a time. Before, selection of multiple templates was possible.

Reproducible: Always
Comment 1 Alvaro Soliverez 2010-08-01 19:07:10 UTC
SVN commit 1157954 by asoliverez:

Enable multiple selection in template selector

BUG:246446

 M  +1 -0      kaccounttemplateselector.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157954