Enable multiple selection in template selector

BUG:246446

svn path=/trunk/extragear/office/kmymoney/; revision=1157954